--- a/project.config.json
+++ b/project.config.json
@@ -3,13 +3,14 @@
 	"projectname": "myApp",
 	"description": "我的第一个微信小程序",
 	"appid": "wxfd2b5da69dede20d",
-	"cloudfunctionRoot": "./functions/",
+	"cloudfunctionRoot": "functions/",
 	"setting": {
-		"urlCheck": true,
+		"urlCheck": false,
 		"es6": false,
 		"postcss": false,
 		"minified": false,
-		"newFeature": true
+		"newFeature": true,
+		"autoAudits": false
 	},
 	"compileType": "miniprogram",
 	"condition": {}
