--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@tarojs/async-await": "^1.2.12",
     "@tarojs/components": "1.2.11",
     "@tarojs/mobx": "1.2.11",
     "@tarojs/mobx-h5": "1.2.11",
